# notion-yandex-lectures

./: .gitignore  LICENSE  main.py  pyproject.toml
